--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "storybook": "start-storybook",
     "test": "htmlhint \"src/**/*.html\" && stylelint \"src/**/*.css\" && eslint \"src/**/*.js\"",
     "scss": "sass scss:dist --style=compressed --no-source-map",
-    "scss:watch": "sass scss:dist --style=expanded --source-map --watch"
+    "scss:watch": "sass scss:dist --style=expanded --source-map --watch",
+    "autoprefix": "npx postcss *.css --use autoprefixer -d dist/"
   },
   "files": [
     "css",
     "scss",
     "package.json"
   ],
-  "author": "Linus Lilja",
+  "author": "Linus",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -31,10 +32,6 @@
     "@storybook/storybook-deployer": "^2.8.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
-    "eslint": "^7.10.0",
-    "eslint-config-standard": "^16.0.1",
-    "htmlhint": "^0.14.1",
-    "prettier": "^2.1.2",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.3.0",
